--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -516,6 +516,7 @@ $("#enviar").on('click',  function(event) {
                 causa:$("#id_causa").val(),
                 solucion: $("#id_solucion").val(),
                 duracion_paro:$("#tiempo").val(),
+                relacion:$("#relacion").val(),
                 estado:$("#id_estado").val(),
                 estado_disp:$("#estado_disp").val(),
             },
