--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -25,7 +25,7 @@
                         Mantenimientos<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'tareas_list' %}">Tareas</a></li>
+                        <!-- <li><a href="{% url 'tareas_list' %}">Tareas</a></li> -->
                         <li><a href="{% url 'rutinas_list' %}">Rutinas</a></li>
                         <li><a href="{% url 'planes_list' %}">Programacion</a></li>
                         <li class="divider"></li>
