--- a/sgim/templates/incidencias/cambios.html
+++ b/sgim/templates/incidencias/cambios.html
@@ -4,6 +4,41 @@
 Ctrl. de Cambios
 {% endblock titulo %}
 
+{% block include_statics %}
+
+
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+ <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
+    
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcombobox.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxpanel.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxdata.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxdatetimeinput.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcalendar.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxtooltip.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/globalization/globalize.js"></script>
+      <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxexpander.js"></script> 
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxvalidator.js"></script>
+
+
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxmenu.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcheckbox.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxdropdownlist.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.pager.js"></script>
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.selection.js"></script> 
+    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxgrid.filter.js"></script> 
+       <script type="text/javascript" src="{{BOWER_URL}}moment/min/moment.min.js"></script> 
+
+  <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxtooltip.js"></script>
+
+{% endblock include_statics %}
 {% block contenido %}
 <div class="ui purple menu">
     <a class="item" href="/">
@@ -19,4 +54,208 @@ Ctrl. de Cambios
 		<i class=" add icon"></i> Seguimiento
 	</a>
 </div>
+<div class="container-fluid">
+    <div class="row">
+        
+        <div class="col-md-12" >
+            <div id="jqxgrid"></div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="ui small modal" >
+    <i class="close icon"></i>
+    <div class="header">
+      <i class="ion-ios-calendar icon"></i>Obtener Incidencias por rango de fechas
+    </div>
+    <div class="content">
+        <div class="description">
+          <h5>Selecciona desde cuando y hasta cuando buscar incidentes</h5>
+            
+            <div id='filtroFecha'>
+            </div>
+
+        </div>
+    </div>
+    <div class="actions">
+        <div class="ui positive left icon button">
+            Buscar 
+            <i class="ion-ios-search-strong icon"></i>
+        </div>
+        <div class="ui black button">
+            Cancelar            
+            <i class="ion-close-round icon"></i>
+        </div>
+    </div>
+</div>
+
+
 {% endblock contenido %}
+
+{% block scripts %}
+
+<script>
+
+$(document).ready(function() {
+    /*Inicializar el modal para filtrar*/
+   
+
+    $.getScript('{{STATIC_URL}}js/asset/globalize.culture.es-NI.js', function () {
+        
+        $("#filtroFecha").jqxDateTimeInput({ width: 250, height: 25,  selectionMode: 'range',culture: 'es-NI'});
+
+    });
+
+                var date1 = new Date();
+                date1.setFullYear(2015, 5, 7);
+                var date2 = new Date();
+                date2.setFullYear(2015, 5, 15);
+                $("#filtroFecha").jqxDateTimeInput('setRange', date1, date2);
+
+
+
+
+
+    /*Inicializar Combos obteniendo los datos del api rest de catalogos*/
+    function get_datos(parametros){
+        if(!parametros)
+            parametros = ""
+         var source =
+            {
+                datatype: "json",
+                datafields: [
+                    { name: 'id', type: 'int' },
+                    { name: 'titulo', type: 'string' },
+                    { name: 'creado', type: 'date' },
+                    { name: 'proposito', type: 'string' },
+                    { name: 'creador', type: 'string' },
+                    { name: 'nombre_solic', type: 'string' },
+                    { name: 'nombre_resp', type: 'string' },
+                    { name: 'reporta', type: 'string' },                  
+                    { name: 'estado',},
+                    { name: 'inicio_previsto',},
+
+                   
+                ],
+                id: 'id',
+                url: '/api/incidencias/cambios/'+parametros
+            };
+      var dataAdapter = new $.jqx.dataAdapter(source);
+      return dataAdapter
+    }
+
+
+  $('.ui.modal').modal({
+    closable:false,
+    transition:'fade up',
+    onApprove : function() {
+        console.log("se enviara le peticion")
+        var range = $("#filtroFecha").jqxDateTimeInput('getRange');
+        var from =  moment(range.from).format("DD/MM/YYYY");
+        var to =  moment(range.to).format("DD/MM/YYYY");
+        console.log(from)
+        $("#jqxgrid").jqxGrid({source: get_datos("?min_date="+from+"&max_date="+to),})
+    }
+ })   
+
+
+  function relacionRender(row, columnfield, value, defaulthtml, columnproperties){
+        div = "<div style='padding:5px;'>"
+        
+        if(value){
+          return div + value+"</div>";
+        }else{
+          return div +"NINGUNA</div>";
+
+        }
+  }
+
+    $("#jqxgrid").jqxGrid({
+
+                width: '100%',
+                theme:'metro', 
+                source: get_datos(),
+                showfilterrow: true,
+                filterable: true,
+                pageable: true,
+                autoshowfiltericon: true,
+                localization: getLocalization(),
+                columns: [
+                  { text: 'Camb. N&deg;', datafield: 'id', width:'60px'},
+                  { text: 'Titulo', datafield: 'titulo', width:'200px'},
+                  { text: 'Solicita', datafield: 'nombre_solic', width:'130px'},
+                  { text: 'Resposnable', datafield: 'nombre_resp', width:'120px'},
+                  { text: 'Proposito', datafield: 'proposito' , },                  
+                  { text: 'Estado', datafield: 'estado', width:'120px'},
+                  { text: 'Inicio Previsto', datafield: 'inicio_previsto', cellsformat:'dd-MMM-yy' , filtertype:'date' , width:'110px'},
+                  { text: 'Usuario', datafield: 'creador', width:'60px'},
+                  { text: 'Fecha', datafield: 'creado', cellsformat:'dd-MMM-yy' , filtertype:'date' , width:'110px'},
+
+              ],
+              showtoolbar: true,
+              rendertoolbar: function (statusbar) {
+                    // appends buttons to the status bar.
+                    var container = $("<div style='margin:5px;'></div>");
+                    var viewButton = $("<div class='ui  tiny blue button'> Ver detalles</div>");
+                    var filterButton = $("<div class='ui  tiny purple button'>Filtrar Fechas</div>");
+                    var reloadbtn = $("<div class='tiny green ui icon button'><i class='icon refresh'></i></div>");
+                    var cerrarBtn = $("<div class='tiny orange ui icon button'><i class='icon ion-flash-off'></i>Cerrar Incidente</div>");
+
+                    container.append(reloadbtn);
+                    container.append(viewButton);
+                    container.append(filterButton);
+                    container.append(cerrarBtn);
+                    statusbar.append(container);
+
+
+                     $(".ui.green.button").jqxTooltip({
+                       content: 'Recargar datos', 
+                       position: 'top-right',
+                      });
+                   
+                    // add new row.
+                    viewButton.click(function (event) {
+                      var selectedrowindex = $("#jqxgrid").jqxGrid('getselectedrowindex');
+                      var id = $("#jqxgrid").jqxGrid('getrowid', selectedrowindex);
+                      if(id!=null){
+                        var win = window.open('/incidencias/incidentes/reporte/detalle/'+id, '_blank');
+                            win.focus(); 
+                      }else{
+                        $.snackbar({content: "<i class='ion-happy yellow icon'></i> Seleccione una fila por favor! ",timeout: 4000});
+                      }
+                       
+                    });
+                    // filter from server.
+                    filterButton.click(function (event) {
+                       $('.ui.modal').modal('show') 
+                    });
+                    reloadbtn.click(function (event) {
+                      $("#jqxgrid").jqxGrid({source: get_datos(),})
+                    });
+                    cerrarBtn.click(function (event) {
+                      confirm("Seguro??")
+                    });
+
+                },
+            });
+
+  $('#jqxgrid').on('rowselect', function (event) 
+  {
+
+      var args = event.args;
+      var rowBoundIndex = args.rowindex;
+      var rowData = args.row;
+      $("#boleta").html(rowData.id)
+      $("#cabecera").html(rowData.dispositivo)
+      $("#descripcion").html(rowData.descripcion)
+
+      //console.log(rowData)
+  });
+ 
+});
+
+</script>
+    
+{% endblock scripts %}
